--- a/catalog-service.yml
+++ b/catalog-service.yml
@@ -1,3 +1,3 @@
 atu:
- greeting: "Welcome to the catalog from the config server"
+ greeting: "Welcome to the catalog from the fresh config server"
 
